--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     width: 85%;
     max-width: 600px;
     margin-bottom: 40px;
-    text-align: left;
+    text-align: center;
 }
 
 #survey-intro h1 {
