--- a/styles-mobile.css
+++ b/styles-mobile.css
@@ -21,7 +21,7 @@ body {
     width: 90%;
     max-width: 350px;
     margin-bottom: 20px;
-    text-align: center;
+    text-align: left;
 }
 
 #survey-intro h1 {
