--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     width: 85%;
-    width: auto;
+    max-width: 600px;
     margin-bottom: 40px;
     text-align: left;
     transition: $1 0.6s ease;
@@ -105,7 +105,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     width: 85%;
-    width: auto;
+    max-width: 600px;
     margin-bottom: 40px;
     text-align: center;
     transition: $1 0.6s ease;
@@ -123,7 +123,7 @@ body {
 }
 
 #basic-info-form input, #basic-info-form select {
-    width: auto;
+    width: 100%;
     padding: 12px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -147,8 +147,8 @@ body {
     border-radius: 4px;
     cursor: pointer;
     transition: $1 0.6s ease;
-    width: auto;
-    width: auto;
+    width: 100%;
+    max-width: 400px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
     margin: 0 auto;
@@ -167,8 +167,8 @@ body {
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    width: auto;
-    width: auto;
+    max-width: 900px;
+    width: 100%;
     text-align: center;
     margin-top: 20px;
 }
@@ -196,7 +196,7 @@ button:hover {
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: auto;
+    max-width: 800px;
     margin: 40px auto;
     text-align: center;
     transition: $1 0.6s ease;
@@ -257,8 +257,8 @@ button:hover {
     padding: 40px;
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    width: auto;
-    width: auto;
+    max-width: 1100px;
+    width: 100%;
     text-align: center;
 }
 
@@ -273,12 +273,12 @@ button:hover {
 /* 視頻容器設計 */
 #video-container {
     margin-bottom: 20px;
-    width: auto;
+    width: 100%;
 }
 
 video {
     border-radius: 8px;
-    width: auto;
+    width: 100%;
     height: 400px;
     pointer-events: none;
     user-select: none;
@@ -353,7 +353,7 @@ video:hover {
 }
 
 textarea {
-    width: auto;
+    width: 100%;
     padding: 10px;
     font-size: 16px;
     box-sizing: border-box;
@@ -375,7 +375,7 @@ textarea:hover {
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     transition: $1 0.6s ease;
-    width: auto;
+    max-width: 800px;
 }
 
 #result-container:hover {
@@ -393,7 +393,7 @@ textarea:hover {
 }
 
 #result-table {
-    width: auto;
+    width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
     transition: $1 0.6s ease;
