--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,8 @@ body {
     align-items: center;
     box-sizing: border-box;
     color: #212121;
-    height: 100vh;
-    justify-content: center;
+    transition: $1 0.6s ease;
 }
-
 
 @keyframes gradientAnimation {
     0% { background-position: 0% 50%; }
@@ -70,7 +68,7 @@ body {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     width: 85%;
     max-width: 600px;
-    margin-bottom: 40px;
+    margin-bottom: 40px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
     text-align: left;
     transition: $1 0.6s ease;
 }
@@ -116,7 +114,7 @@ body {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     width: 85%;
     max-width: 600px;
-    margin-bottom: 40px;
+    margin-bottom: 40px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
     text-align: center;
     transition: $1 0.6s ease;
 }
@@ -175,12 +173,15 @@ body {
 #main-menu, #quiz-container {
     background-color: white;
     padding: 40px;
-    border-radius: 8px;
+    border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    max-width: 900px;
+    max-width: 1100px;
     width: 100%;
     text-align: center;
-    margin-top: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* 一般按鈕的設計 */
@@ -207,7 +208,7 @@ button:hover {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 800px;
-    margin: 40px auto;
+    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
     text-align: center;
     transition: $1 0.6s ease;
 }
@@ -270,8 +271,6 @@ button:hover {
     max-width: 1100px;
     width: 100%;
     text-align: center;
-    height: 100%;
-    margin: auto;
 }
 
 /* 按鈕選項區域設計 */
@@ -381,13 +380,13 @@ textarea:hover {
 
 /* 結果區設計 */
 #result-container {
-    margin-top: 5%;
-    padding: 2.5%;
+    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+    padding: 20px;
     background-color: #f8f9fa;
-    border-radius: 1%;
-    box-shadow: 0 4% 12% rgba(0, 0, 0, 0.1);
-    transition: all 0.6s ease;
-    max-width: 80%;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: $1 0.6s ease;
+    width: 80%;
 }
 
 #result-container:hover {
@@ -438,7 +437,7 @@ textarea:hover {
 #summary {
     font-size: 1.2em;
     color: #333;
-    margin-top: 20px;
+    position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
 }
 
 /* 樣式化表格 */
